force-app/main/default/objects/Inventory_Transfer_Order__c/Inventory_Transfer_Order__c.object-meta.xml
<CustomObject>
    <label>Inventory Transfer Order</label>
    <nameField>
        <displayFormat>XFR-{0000000}</displayFormat>
        <label>Transfer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Transfer Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>