force-app/main/default/objects/Inventory_Transfer_Order__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aroma360</fullName>
            </value>
            <value>
                <fullName>Hotel Scents</fullName>
            </value>
            <value>
                <fullName>Private Label</fullName>
            </value>
            <value>
                <fullName>Hotel Collection</fullName>
            </value>
            <value>
                <fullName>Scenting.com</fullName>
            </value>
            <value>
                <fullName>Luxury Scenting</fullName>
            </value>
            <value>
                <fullName>Hotel Collection Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>