force-app/main/default/objects/Inventory_Transfer_Order__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>&quot;[&quot;+Origin_Warehouse__r.Name+&quot;]&quot; +&quot; --&gt; &quot;+ &quot;[&quot;+Destination_Warehouse__r.Name+&quot;]&quot; +&quot; : &quot;+TEXT( DATEVALUE(CreatedDate) )</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>