force-app/main/default/objects/Inventory_Transfer_Order__c/fields/Destination_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Destination_Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Destination Warehouse</label>
    <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
    <relationshipLabel>Transfer Orders (This Destination Warehouse)</relationshipLabel>
    <relationshipName>Transfer_Orders_Destination</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>