force-app/main/default/objects/Inventory_Transfer_Order__c/fields/Origin_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Origin_Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Origin Warehouse</label>
    <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
    <relationshipLabel>Transfer Orders (This Origin Warehouse)</relationshipLabel>
    <relationshipName>Transfer_Orders_Origin</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>