force-app/main/default/objects/Inventory_Transfer_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Origin_Warehouse__c</columns>
    <columns>Destination_Warehouse__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>